--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<title>Distribuidora De Alimentos</title>
+	<title>Distribuidora SOS</title>
 	<link rel="stylesheet" href="CSS/style.css">
 	<link rel="stylesheet" href="CSS/media.css">
 	<link rel="stylesheet" href="style.css">
@@ -12,7 +12,7 @@
 <body>
 	<!-- NAVBAR -->
 	<nav class="nav">
-		<img src="IMG/logoDisa.png" class="img">
+		<h1>SOS</h1>
 		<div class="MenuDesplegable">
 			<button>
 				<img src="IMG/barra.png" alt="" class="btnm">
@@ -60,32 +60,22 @@
 		<div class="sliderInformacion" id="sliderInformacion">
 			<div class="info" id="mision">
 				<h1 class="h1">Misión<img src="IMG/outline_outlined_flag_black_48dp.png" alt="" class="img"></h1>
-				<p class="p">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+				<p class="p">Ser la plataforma líder en gestión de ventas, simplificando y optimizando los procesos comerciales para empresas de todos los tamaños, impulsando su crecimiento y rentabilidad.</p>
 				<img src="IMG/mision-cumplida.png" alt="" class="muñeco">
 			</div>
 			<div class="info" id="vision">
 				<h1 class="h1">Visión<img src="IMG/visi.png" alt="" class="img im2"></h1>
-				<p class="p">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+				<p class="p">Convertirnos en el aliado indispensable para las empresas, proporcionando herramientas tecnológicas innovadoras que transformen la forma en que gestionan sus ventas y aumentan su éxito</p>
 				<img src="IMG/visiones.png" alt="" class="muñeco">
 			</div>
 			<div class="info" id="objetivo">
 				<h1 class="h1">Objetivos<img src="IMG/objetivo.png" alt="" class="img"></h1>
-				<p class="p">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+				<p class="p">Optimizar la gestión de ventas:
+
+					Automatizar tareas repetitivas para liberar tiempo a los vendedores.
+					Agilizar el proceso de emisión de facturas y seguimiento de pedidos.
+					Brindar información precisa y actualizada sobre productos, clientes y ventas.
+					</p>
 				<img src="IMG/clipart2186343.png" alt="" class="muñeco">
 			</div>
 		</div>
@@ -557,10 +547,10 @@
 			<div class="contacto">
 				<h3 class="h3">Contactos</h3>
 				<ul>
-					<li><img src="IMG/E-mail.png" class="img"><a href="#">pedidos_disa@hotmail.com</a></li>
-					<li><img src="IMG/wasa.png" class="img"><a href="">+58 412 2732376</a></li>
-					<li><img src="IMG/E-mail.png" alt="" class="img"><a href="">disabarcelona@gmail.com</a></li>
-					<li><img src="IMG/wasa.png" alt="" class="img"><a href="">+58 416 6863934</a></li>
+					<li><img src="IMG/E-mail.png" class="img"><a href="#">agregargmail</a></li>
+					<li><img src="IMG/wasa.png" class="img"><a href="">agregarnumero</a></li>
+					<li><img src="IMG/E-mail.png" alt="" class="img"><a href="">agregargmail</a></li>
+					<li><img src="IMG/wasa.png" alt="" class="img"><a href="">agregarnumero</a></li>
 				</ul>
 			</div>
 			<div class="minilogo">
@@ -569,7 +559,7 @@
 		</div>
 	</footer>
 	<div class="copy">
-		<h4 class="h4">@ Codypro-Corporation @</h4>
+		<h4 class="h4">Proyecto Juan David</h4>
 	</div>
 	<script src="JAVASCRIPT/MenuDesplegable.js"></script>
 	<script src="JAVASCRIPT/sliderInformacion.js"></script>
