--- a/index.html
+++ b/index.html
@@ -123,12 +123,12 @@
 		<h3 class="h3pro">Nuestros productos</h3>
 	<div class="product-minimal">
 		<div class="product-showcase">
-			<h2 class="title">productos 1.</h2>
+			<h2 class="title">Productos 1</h2>
 			<div class="showcase-wrapper has-scrollbar">
 				<div class="showcase-container">
 					<div class="showcase">
 						<a href="#" class="showcase-img-box">
-							<img src="IMG/logoDisa3.png" alt="" class="chowcase-img">
+							<img src="IMG/visiones.png" alt="" class="chowcase-img">
 						</a>
 						<div class="chowcase-content">
 							<a href="#" class="dd">
@@ -139,7 +139,7 @@
 					</div>
 					<div class="showcase">
 						<a href="#" class="showcase-img-box">
-							<img src="IMG/logoDisa3.png" alt="" class="chowcase-img">
+							<img src="IMG/visiones.png" alt="" class="chowcase-img">
 						</a>
 						<div class="chowcase-content">
 							<a href="#">
@@ -150,7 +150,7 @@
 					</div>
 					<div class="showcase">
 						<a href="#" class="showcase-img-box">
-							<img src="IMG/logoDisa3.png" alt="" class="chowcase-img">
+							<img src="IMG/visiones.png" alt="" class="chowcase-img">
 						</a>
 						<div class="chowcase-content">
 							<a href="#">
@@ -161,104 +161,7 @@
 					</div>
 					<div class="showcase">
 						<a href="#" class="showcase-img-box">
-							<img src="IMG/logoDisa3.png" alt="" class="chowcase-img">
-						</a>
-						<div class="chowcase-content">
-							<a href="#">
-								<h4 class="chowcase-title">Nombre del producto</h4>
-							</a>
-							<a href="#" class="chowcase-category">marca del producto</a>
-						</div>
-					</div>
-				</div>
-				<div class="showcase-container">
-					<div class="showcase">
-						<a href="#" class="showcase-img-box">
-							<img src="IMG/logoDisa3.png" alt="" class="chowcase-img">
-						</a>
-						<div class="chowcase-content">
-							<a href="#">
-								<h4 class="chowcase-title">Nombre del producto</h4>
-							</a>
-							<a href="#" class="chowcase-category">marca del producto</a>
-						</div>
-					</div>
-					<div class="showcase">
-						<a href="#" class="showcase-img-box">
-							<img src="IMG/logoDisa3.png" alt="" class="chowcase-img">
-						</a>
-						<div class="chowcase-content">
-							<a href="#">
-								<h4 class="chowcase-title">Nombre del producto</h4>
-							</a>
-							<a href="#" class="chowcase-category">marca del producto</a>
-						</div>
-					</div>
-					<div class="showcase">
-						<a href="#" class="showcase-img-box">
-							<img src="IMG/logoDisa3.png" alt="" class="chowcase-img">
-						</a>
-						<div class="chowcase-content">
-							<a href="#">
-								<h4 class="chowcase-title">Nombre del producto</h4>
-							</a>
-							<a href="#" class="chowcase-category">marca del producto</a>
-						</div>
-					</div>
-					<div class="showcase">
-						<a href="#" class="showcase-img-box">
-							<img src="IMG/logoDisa3.png" alt="" class="chowcase-img">
-						</a>
-						<div class="chowcase-content">
-							<a href="#">
-								<h4 class="chowcase-title">Nombre del producto</h4>
-							</a>
-							<a href="#" class="chowcase-category">marca del producto</a>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-		<div class="product-showcase">
-			<h2 class="title">productos 2</h2>
-			<div class="showcase-wrapper has-scrollbar">
-				<div class="showcase-container">
-					<div class="showcase">
-						<a href="#" class="showcase-img-box">
-							<img src="IMG/logoDisa3.png" alt="" class="chowcase-img">
-						</a>
-						<div class="chowcase-content">
-							<a href="#">
-								<h4 class="chowcase-title">Nombre del producto</h4>
-							</a>
-							<a href="#" class="chowcase-category">marca del producto</a>
-						</div>
-					</div>
-					<div class="showcase">
-						<a href="#" class="showcase-img-box">
-							<img src="IMG/logoDisa3.png" alt="" class="chowcase-img">
-						</a>
-						<div class="chowcase-content">
-							<a href="#">
-								<h4 class="chowcase-title">Nombre del producto</h4>
-							</a>
-							<a href="#" class="chowcase-category">marca del producto</a>
-						</div>
-					</div>
-					<div class="showcase">
-						<a href="#" class="showcase-img-box">
-							<img src="IMG/logoDisa3.png" alt="" class="chowcase-img">
-						</a>
-						<div class="chowcase-content">
-							<a href="#">
-								<h4 class="chowcase-title">Nombre del producto</h4>
-							</a>
-							<a href="#" class="chowcase-category">marca del producto</a>
-						</div>
-					</div>
-					<div class="showcase">
-						<a href="#" class="showcase-img-box">
-							<img src="IMG/logoDisa3.png" alt="" class="chowcase-img">
+							<img src="IMG/visiones.png" alt="" class="chowcase-img">
 						</a>
 						<div class="chowcase-content">
 							<a href="#">
@@ -271,7 +174,7 @@
 				<div class="showcase-container">
 					<div class="showcase">
 						<a href="#" class="showcase-img-box">
-							<img src="IMG/logoDisa3.png" alt="" class="chowcase-img">
+							<img src="IMG/visiones.png" alt="" class="chowcase-img">
 						</a>
 						<div class="chowcase-content">
 							<a href="#">
@@ -282,7 +185,7 @@
 					</div>
 					<div class="showcase">
 						<a href="#" class="showcase-img-box">
-							<img src="IMG/logoDisa3.png" alt="" class="chowcase-img">
+							<img src="IMG/visiones.png" alt="" class="chowcase-img">
 						</a>
 						<div class="chowcase-content">
 							<a href="#">
@@ -293,7 +196,7 @@
 					</div>
 					<div class="showcase">
 						<a href="#" class="showcase-img-box">
-							<img src="IMG/logoDisa3.png" alt="" class="chowcase-img">
+							<img src="IMG/visiones.png" alt="" class="chowcase-img">
 						</a>
 						<div class="chowcase-content">
 							<a href="#">
@@ -304,7 +207,7 @@
 					</div>
 					<div class="showcase">
 						<a href="#" class="showcase-img-box">
-							<img src="IMG/logoDisa3.png" alt="" class="chowcase-img">
+							<img src="IMG/visiones.png" alt="" class="chowcase-img">
 						</a>
 						<div class="chowcase-content">
 							<a href="#">
@@ -317,12 +220,12 @@
 			</div>
 		</div>
 		<div class="product-showcase">
-			<h2 class="title">productos 3</h2>
+			<h2 class="title">Productos 2</h2>
 			<div class="showcase-wrapper has-scrollbar">
 				<div class="showcase-container">
 					<div class="showcase">
 						<a href="#" class="showcase-img-box">
-							<img src="IMG/logoDisa3.png" alt="" class="chowcase-img">
+							<img src="IMG/visiones.png" alt="" class="chowcase-img">
 						</a>
 						<div class="chowcase-content">
 							<a href="#">
@@ -333,7 +236,7 @@
 					</div>
 					<div class="showcase">
 						<a href="#" class="showcase-img-box">
-							<img src="IMG/logoDisa3.png" alt="" class="chowcase-img">
+							<img src="IMG/visiones.png" alt="" class="chowcase-img">
 						</a>
 						<div class="chowcase-content">
 							<a href="#">
@@ -344,7 +247,7 @@
 					</div>
 					<div class="showcase">
 						<a href="#" class="showcase-img-box">
-							<img src="IMG/logoDisa3.png" alt="" class="chowcase-img">
+							<img src="IMG/visiones.png" alt="" class="chowcase-img">
 						</a>
 						<div class="chowcase-content">
 							<a href="#">
@@ -355,7 +258,7 @@
 					</div>
 					<div class="showcase">
 						<a href="#" class="showcase-img-box">
-							<img src="IMG/logoDisa3.png" alt="" class="chowcase-img">
+							<img src="IMG/visiones.png" alt="" class="chowcase-img">
 						</a>
 						<div class="chowcase-content">
 							<a href="#">
@@ -368,7 +271,7 @@
 				<div class="showcase-container">
 					<div class="showcase">
 						<a href="#" class="showcase-img-box">
-							<img src="IMG/logoDisa3.png" alt="" class="chowcase-img">
+							<img src="IMG/visiones.png" alt="" class="chowcase-img">
 						</a>
 						<div class="chowcase-content">
 							<a href="#">
@@ -379,7 +282,7 @@
 					</div>
 					<div class="showcase">
 						<a href="#" class="showcase-img-box">
-							<img src="IMG/logoDisa3.png" alt="" class="chowcase-img">
+							<img src="IMG/visiones.png" alt="" class="chowcase-img">
 						</a>
 						<div class="chowcase-content">
 							<a href="#">
@@ -390,7 +293,7 @@
 					</div>
 					<div class="showcase">
 						<a href="#" class="showcase-img-box">
-							<img src="IMG/logoDisa3.png" alt="" class="chowcase-img">
+							<img src="IMG/visiones.png" alt="" class="chowcase-img">
 						</a>
 						<div class="chowcase-content">
 							<a href="#">
@@ -401,7 +304,7 @@
 					</div>
 					<div class="showcase">
 						<a href="#" class="showcase-img-box">
-							<img src="IMG/logoDisa3.png" alt="" class="chowcase-img">
+							<img src="IMG/visiones.png" alt="" class="chowcase-img">
 						</a>
 						<div class="chowcase-content">
 							<a href="#">
@@ -414,12 +317,12 @@
 			</div>
 		</div>
 		<div class="product-showcase">
-			<h2 class="title">productos 4</h2>
+			<h2 class="title">Productos 3</h2>
 			<div class="showcase-wrapper has-scrollbar">
 				<div class="showcase-container">
 					<div class="showcase">
 						<a href="#" class="showcase-img-box">
-							<img src="IMG/logoDisa3.png" alt="" class="chowcase-img">
+							<img src="IMG/visiones.png" alt="" class="chowcase-img">
 						</a>
 						<div class="chowcase-content">
 							<a href="#">
@@ -430,7 +333,7 @@
 					</div>
 					<div class="showcase">
 						<a href="#" class="showcase-img-box">
-							<img src="IMG/logoDisa3.png" alt="" class="chowcase-img">
+							<img src="IMG/visiones.png" alt="" class="chowcase-img">
 						</a>
 						<div class="chowcase-content">
 							<a href="#">
@@ -441,7 +344,7 @@
 					</div>
 					<div class="showcase">
 						<a href="#" class="showcase-img-box">
-							<img src="IMG/logoDisa3.png" alt="" class="chowcase-img">
+							<img src="IMG/visiones.png" alt="" class="chowcase-img">
 						</a>
 						<div class="chowcase-content">
 							<a href="#">
@@ -452,7 +355,7 @@
 					</div>
 					<div class="showcase">
 						<a href="#" class="showcase-img-box">
-							<img src="IMG/logoDisa3.png" alt="" class="chowcase-img">
+							<img src="IMG/visiones.png" alt="" class="chowcase-img">
 						</a>
 						<div class="chowcase-content">
 							<a href="#">
@@ -465,7 +368,7 @@
 				<div class="showcase-container">
 					<div class="showcase">
 						<a href="#" class="showcase-img-box">
-							<img src="IMG/logoDisa3.png" alt="" class="chowcase-img">
+							<img src="IMG/visiones.png" alt="" class="chowcase-img">
 						</a>
 						<div class="chowcase-content">
 							<a href="#">
@@ -476,7 +379,7 @@
 					</div>
 					<div class="showcase">
 						<a href="#" class="showcase-img-box">
-							<img src="IMG/logoDisa3.png" alt="" class="chowcase-img">
+							<img src="IMG/visiones.png" alt="" class="chowcase-img">
 						</a>
 						<div class="chowcase-content">
 							<a href="#">
@@ -487,7 +390,7 @@
 					</div>
 					<div class="showcase">
 						<a href="#" class="showcase-img-box">
-							<img src="IMG/logoDisa3.png" alt="" class="chowcase-img">
+							<img src="IMG/visiones.png" alt="" class="chowcase-img">
 						</a>
 						<div class="chowcase-content">
 							<a href="#">
@@ -498,7 +401,104 @@
 					</div>
 					<div class="showcase">
 						<a href="#" class="showcase-img-box">
-							<img src="IMG/logoDisa3.png" alt="" class="chowcase-img">
+							<img src="IMG/visiones.png" alt="" class="chowcase-img">
+						</a>
+						<div class="chowcase-content">
+							<a href="#">
+								<h4 class="chowcase-title">Nombre del producto</h4>
+							</a>
+							<a href="#" class="chowcase-category">marca del producto</a>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="product-showcase">
+			<h2 class="title">Productos 4</h2>
+			<div class="showcase-wrapper has-scrollbar">
+				<div class="showcase-container">
+					<div class="showcase">
+						<a href="#" class="showcase-img-box">
+							<img src="IMG/visiones.png" alt="" class="chowcase-img">
+						</a>
+						<div class="chowcase-content">
+							<a href="#">
+								<h4 class="chowcase-title">Nombre del producto</h4>
+							</a>
+							<a href="#" class="chowcase-category">marca del producto</a>
+						</div>
+					</div>
+					<div class="showcase">
+						<a href="#" class="showcase-img-box">
+							<img src="IMG/visiones.png" alt="" class="chowcase-img">
+						</a>
+						<div class="chowcase-content">
+							<a href="#">
+								<h4 class="chowcase-title">Nombre del producto</h4>
+							</a>
+							<a href="#" class="chowcase-category">marca del producto</a>
+						</div>
+					</div>
+					<div class="showcase">
+						<a href="#" class="showcase-img-box">
+							<img src="IMG/visiones.png" alt="" class="chowcase-img">
+						</a>
+						<div class="chowcase-content">
+							<a href="#">
+								<h4 class="chowcase-title">Nombre del producto</h4>
+							</a>
+							<a href="#" class="chowcase-category">marca del producto</a>
+						</div>
+					</div>
+					<div class="showcase">
+						<a href="#" class="showcase-img-box">
+							<img src="IMG/visiones.png" alt="" class="chowcase-img">
+						</a>
+						<div class="chowcase-content">
+							<a href="#">
+								<h4 class="chowcase-title">Nombre del producto</h4>
+							</a>
+							<a href="#" class="chowcase-category">marca del producto</a>
+						</div>
+					</div>
+				</div>
+				<div class="showcase-container">
+					<div class="showcase">
+						<a href="#" class="showcase-img-box">
+							<img src="IMG/visiones.png" alt="" class="chowcase-img">
+						</a>
+						<div class="chowcase-content">
+							<a href="#">
+								<h4 class="chowcase-title">Nombre del producto</h4>
+							</a>
+							<a href="#" class="chowcase-category">marca del producto</a>
+						</div>
+					</div>
+					<div class="showcase">
+						<a href="#" class="showcase-img-box">
+							<img src="IMG/visiones.png" alt="" class="chowcase-img">
+						</a>
+						<div class="chowcase-content">
+							<a href="#">
+								<h4 class="chowcase-title">Nombre del producto</h4>
+							</a>
+							<a href="#" class="chowcase-category">marca del producto</a>
+						</div>
+					</div>
+					<div class="showcase">
+						<a href="#" class="showcase-img-box">
+							<img src="IMG/visiones.png" alt="" class="chowcase-img">
+						</a>
+						<div class="chowcase-content">
+							<a href="#">
+								<h4 class="chowcase-title">Nombre del producto</h4>
+							</a>
+							<a href="#" class="chowcase-category">marca del producto</a>
+						</div>
+					</div>
+					<div class="showcase">
+						<a href="#" class="showcase-img-box">
+							<img src="IMG/visiones.png" alt="" class="chowcase-img">
 						</a>
 						<div class="chowcase-content">
 							<a href="#">
